--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -259,4 +259,5 @@
     <string name="addFromCSV">Add from CSV</string>
     <string name="csvFromFile">Load CSV from File</string>
     <string name="csvFromURL">Load CSV from URL</string>
+    <string name="stopFacedown">Stop Sound by turning the screen face down.</string>
 </resources>
