--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -162,7 +162,7 @@
   <string name="permissionCameraTitle">Разрешения для камеры</string>
   <string name="permissionLocationText">Доступ к геоданным необходим для определения города. В случае отсутствия доступа к геоданным, необходимо установить город вручную.</string>
   <string name="permissionLocationTitle">Доступ к геоданным</string>
-  <string name="permissionStorageText">Необходимо разрешение на хранение данных... Без этого разрешения некоторые функции будут недоступны</string>
+  <string name="permissionStorageText">Необходимо разрешение на хранение данных… Без этого разрешения некоторые функции будут недоступны</string>
   <string name="permissionStorageTitle">Доступ к хранению данных</string>
   <string name="prayerNotification">Уведомление о молитве</string>
   <string name="refresh">Синхронизировать</string>
