--- a/app/src/main/res/values-ku/strings.xml
+++ b/app/src/main/res/values-ku/strings.xml
@@ -83,7 +83,7 @@
   <string name="restore">Vehanîn</string>
   <string name="search">Navbend</string>
   <string name="selectOther">Din4578354…</string>
-  <string name="sendMail">E-mail bişîne</string>
+  <string name="mail">E-mail bişîne</string>
   <string name="settings">Mîhengan</string>
   <string name="share">Par</string>
   <string name="silent">Bêdeng</string>
