--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -173,7 +173,7 @@
   <string name="restore">Restore</string>
   <string name="search">Search</string>
   <string name="selectOther">other&#8230;</string>
-  <string name="sendMail">E-Mail</string>
+  <string name="mail">E-Mail</string>
   <string name="settings">Settings</string>
   <string name="share">Share</string>
   <string name="shareTimes">Today\'s Prayertimes for %1$s</string>
