--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -173,7 +173,7 @@
   <string name="restore">Restaurer</string>
   <string name="search">Chercher</string>
   <string name="selectOther">autre choix</string>
-  <string name="sendMail">envoyer e-mail</string>
+  <string name="mail">envoyer e-mail</string>
   <string name="settings">Paramètres</string>
   <string name="share">Partager</string>
   <string name="shareTimes">Les temps de prières pour aujourd\'hui %1$s</string>
