--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -173,7 +173,7 @@
   <string name="restore">Geri getir</string>
   <string name="search">Ara</string>
   <string name="selectOther">Başka seç&#8230;</string>
-  <string name="sendMail">E-Mail yaz</string>
+  <string name="mail">E-Mail yaz</string>
   <string name="settings">Ayarlar</string>
   <string name="share">Paylaş</string>
   <string name="shareTimes">%1$s için bugün ki Namaz Vakitleri</string>
