--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,7 +169,8 @@
     <string name="restore">Restore</string>
     <string name="search">Search</string>
     <string name="selectOther">other&#8230;</string>
-    <string name="sendMail">E-Mail</string>
+    <string name="mail">E-Mail</string>
+    <string name="sendMail">Send E-Mail</string>
     <string name="settings">Settings</string>
     <string name="share">Share</string>
     <string name="shareTimes">Today\'s Prayertimes for %1$s</string>
@@ -262,8 +263,10 @@
     <string name="csvFromURL">Load CSV from URL</string>
     <string name="stopFacedown">Stop Sound by turning the screen face down.</string>
     <string name="ratingFirstDlgTitle">Do you like this App?</string>
-    <string name="ratingPositiveTitle">Rate this App</string>
-    <string name="ratingPositiveText">Do you want to rate this App in the Play Store?</string>
+    <string name="ratingPositiveTitle">Rate this App!</string>
+    <string name="ratingPositiveText">If you like this App, take a moment to vote in the Play Store.</string>
     <string name="ratingNegativeTitle">Write Feedback!</string>
-    <string name="ratingNegativeText">Do you me an E-Mail, and help me improving this app?</string>
+    <string name="ratingNegativeText">Write me an E-Mail with your feelings, impressions and suggestions for this App and help me improving it continuously!</string>
+    <string name="notnow">Not Now</string>
+    <string name="totheplaystore">Take me to the Play Store</string>
 </resources>
