--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -264,7 +264,7 @@
     <string name="stopFacedown">Stop Sound by turning the screen face down.</string>
     <string name="ratingFirstDlgTitle">Do you like this App?</string>
     <string name="ratingPositiveTitle">Rate this App!</string>
-    <string name="ratingPositiveText">If you like this App, take a moment to vote in the Play Store.</string>
+    <string name="ratingPositiveText">If you like this App, take a moment to vote it in the Play Store.</string>
     <string name="ratingNegativeTitle">Write Feedback!</string>
     <string name="ratingNegativeText">Write me an E-Mail with your feelings, impressions and suggestions for this App and help me improving it continuously!</string>
     <string name="notnow">Not Now</string>
