--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -266,4 +266,5 @@
     <string name="notnow">Not Now</string>
     <string name="totheplaystore">Take me to the Play Store</string>
     <string name="widget_current_vakit">Widget - Alternative Current Time indicator</string>
+    <string name="support_development">Support Development</string>
 </resources>
