--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -207,7 +207,7 @@
   <string name="widgetCountdownType">Widget - Countdown Minutes</string>
   <string name="widgetDesign">Theme</string>
   <string name="widgetLong">Prayer Times - 4*1 Widget</string>
-  <string name="widget">Prayer Times - 2*2 Widget</string>
+  <string name="widgetLabel">Prayer Times - 2*2 Widget</string>
   <string name="widgetSilenter">Prayer Times - Silenter Widget</string>
   <string name="widgetSmall">Prayer Times - 1*1 Widget</string>
   <string name="witr">Witr</string>
