--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -205,7 +205,7 @@
   <string name="widgetCountdownType">Widget - compte à rebours</string>
   <string name="widgetDesign">Thème</string>
   <string name="widgetLong">Horaires des prières - 4 * 1 Widget</string>
-  <string name="widget">Horaires des prières - 2 * 2 Widget</string>
+  <string name="widgetLabel">Horaires des prières - 2 * 2 Widget</string>
   <string name="widgetSilenter">Horaires des prières - Silenter Widget</string>
   <string name="widgetSmall">Horaires des prières - 1 * 1 Widget</string>
   <string name="witr">witr</string>
