--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -187,7 +187,7 @@
   <string name="tesbihat">Tasbeehat</string>
   <string name="timeBased">Minutes</string>
   <string name="time">Time</string>
-  <string name="touchToSelectCity">Touch hier to select City</string>
+  <string name="touchToSelectCity">Touch here to select City</string>
   <string name="transWhiteWidget">Transparent White Widget</string>
   <string name="transWidget">Transparent Widget</string>
   <string name="test">Try</string>
@@ -268,4 +268,8 @@
   <string name="notnow">Not Now</string>
   <string name="totheplaystore">Take me to the Play Store</string>
   <string name="widget_current_vakit">Widget - Alternative current Prayertimes indicator</string>
+  <string name="support_development">Support Development</string>
+  <string name="widget">Widget</string>
+  <string name="showLegacyWidgets">Show legacy Widgets</string>
+  <string name="showLegacyWidgetsSummary">Only use if you have problems with your Widgets</string>
 </resources>
