New Crowdin translations (#95) (BOSNIAN)
* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* Approved. Step name: Proofread

* Approved. Step name: Proofread

* Approved. Step name: Proofread

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations strings.xml (Kurdish2)

* New translations strings.xml (Kurdish2)

* New translations strings.xml (Kurdish2)

* New translations strings.xml (Kurdish2)

* New translations strings.xml (Turkish)

* New translations strings.xml (German)

* New translations strings.xml (Turkish)

* New translations strings.xml (German)

* New translations strings.xml (English)

* New translations strings.xml (Kurdish2)

* New translations strings.xml (French)

* New translations strings.xml (Arabic)

* New translations strings.xml (Russian)

* New translations strings.xml (Turkish)

* New translations strings.xml (German)

* New translations strings.xml (English)

* New translations strings.xml (French)

* New translations strings.xml (Dutch)

* New translations strings.xml (Dutch)

* New translations strings.xml (Dutch)

* New translations strings.xml (Dutch)

* New transl

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -23,7 +23,7 @@
   <string name="adjMidnight">منتصف الليل</string>
   <string name="adjTime">إستناداً إلى الوقت ( ١\٧ الليل)</string>
   <string name="afterImsak">بعد الفجر</string>
-  <string name="alternativeOngoing">ودجيت تنبيه بديل</string>
+  <string name="alternativeOngoing">اختر ودجيت تنبيه بديل</string>
   <string name="angle">الزاوية</string>
   <string name="angleBased">إستناداً الى الزاوية</string>
   <string name="appName">أوقات الصلاة</string>
@@ -178,11 +178,14 @@
   <string name="restore">إسترجاع</string>
   <string name="search">بحث</string>
   <string name="selectOther">أخرى &#8230;</string>
+  <string name="mail">البريد الإلكتروني</string>
+  <string name="sendMail">إرسال بريد إلكتروني</string>
   <string name="settings">إعدادات</string>
   <string name="share">مشاركة</string>
   <string name="shareTimes">أرسل أقوات الصلاة لهذا اليوم لـ %1$s</string>
   <string name="showMore">إظهار المزيد</string>
   <string name="silenterDuration">مدة تفعيل حالة الصامت</string>
+  <string name="silenterType">الوضع الصامت</string>
   <string name="silent">صامت</string>
   <string name="sorted">فرز الأحاديث موضوعياً</string>
   <string name="soundPicker">اختر الصوت</string>
@@ -193,6 +196,7 @@
   <string name="tesbihat">الأذكار</string>
   <string name="timeBased">دقائق</string>
   <string name="time">الوقت</string>
+  <string name="touchToSelectCity">أنقر هنا لاختيار المدينة</string>
   <string name="transWhiteWidget">ودجيت أبيض شفاف</string>
   <string name="transWidget">ودجيت شفاف</string>
   <string name="test">تجريب</string>
@@ -212,6 +216,7 @@
   <string name="widgetCountdownType">ودجيت العد التنازلي</string>
   <string name="widgetDesign">تصاميم</string>
   <string name="widgetLong">ودجيت أوقات الصلاة 4*1</string>
+  <string name="widgetLabel">ودجيت أوقات الصلاة 2*2</string>
   <string name="widgetSilenter">أوقات الصلاة - ودجيت الصامت</string>
   <string name="widgetSmall">ودجيت أوقات الصلاة 1*1</string>
   <string name="witr">الوتر</string>
@@ -234,6 +239,45 @@
   <string name="vakit_indicator_next">وقت الصلاة التالي</string>
   <string name="vakit_indicator_current">وقت الصلاة الحالي</string>
   <string name="show_notification_screen">إظهار شاشة التنبيه</string>
+  <string name="autoremove_notification">أزل رسالة التنبيه بعد الأذان</string>
+  <string name="about">حول التطبيق</string>
+  <string name="report_bug">أرسل تقريراً بالخطأ</string>
+  <string name="report_bug_sum">إبلاغ عن علة أو طلب ميزات جديدة.</string>
   <string name="translate">ترجمة</string>
+  <string name="translate_sum">ساعدنا في ترجمة هذا التطبيق لمزيد من اللغات</string>
   <string name="github">GitHub</string>
+  <string name="github_sum">غيِّر في مستودع الملفات وأضف تغييراتك، أو بلغ عن علة.</string>
+  <string name="license">الترخيص</string>
+  <string name="license_sum">راجع رخصة أباتشي، الإصدار 2.0 شروط ترخيص استخدام برنامج أوقات الصلاة</string>
+  <string name="library_licenses">مكتبة الترخيص</string>
+  <string name="library_licenses_sum">تحقق من مكتبات الطرف الثالث المستخدمة في أوقات الصلاة</string>
+  <string name="rate">قيَّم</string>
+  <string name="rate_desc">أعطي التطبيق تقييم إيجابي إذا أعجبك.</string>
+  <string name="sendMail_sum">أرسل لي رسالة بالبريد إلكتروني!</string>
+  <string name="beta_tester_desc">إبدأ بإستخدام النسخة التحريبية</string>
+  <string name="title_activity_maps">خريطة</string>
+  <string name="no_internet">لا يوجد اتصال بالإنترنت</string>
+  <string name="export">استخراج</string>
+  <string name="versionNotSupported">لا تدعم نسخة الأندرويد الخاصة بك هذا التطبيق!</string>
+  <string name="from">من</string>
+  <string name="to">إلى</string>
+  <string name="permissionNotGranted">لم يُمنح الإذن.</string>
+  <string name="useOSMGeocoder">استخدام مزود الخرائط Openstreet من أجل الترميز الجغرافي</string>
+  <string name="addFromCSV">إضافة من ملف CSV</string>
+  <string name="csvFromFile">تحميل CSV من الملف</string>
+  <string name="csvFromURL">تحميل CSV من رابط</string>
+  <string name="stopFacedown">إيقاف الصوت عن طريق تحويل وجه الشاشة للأسفل.</string>
+  <string name="ratingFirstDlgTitle">هل أعجبك هذا التطبيق؟</string>
+  <string name="ratingPositiveTitle">قيّم هذا التطبيق!</string>
+  <string name="ratingPositiveText">إذا أعجبك هذا التطبيق، أعطي دقيقة من وقتك لتقييم التطبيق في مخزن جوجل بلاي.</string>
+  <string name="ratingNegativeTitle">كتابة ملاحظة للمرمج!</string>
+  <string name="ratingNegativeText">أرسل لي رسال بريد إلكتروني حول ملاحظاتك و انطباعك حول هذا التطبيق وساعدنا في تتطوير التطبيق!</string>
+  <string name="notnow">ليس الآن</string>
+  <string name="totheplaystore">إفتح مخزن جوجل للتطبيقات</string>
+  <string name="widget_current_vakit">ويدجيت استخدم مؤشر بديل من أجل عرض التوقيت الحالي</string>
+  <string name="support_development">إدعم تطوير هذا التطبيق</string>
+  <string name="widget">ويدجيت</string>
+  <string name="showLegacyWidgets">إعرض عناصر ويدجيت القديمة</string>
+  <string name="showLegacyWidgetsSummary">استخدم فقط إذا كان لديك مشاكل مع عناصر الويدجيت</string>
+  <string name="pleaseDeleteAndReadd">الرجاء حذف هذه المدينة وإعادة إضافتها.</string>
 </resources>
