--- a/app/src/main/res/values-bs/strings.xml
+++ b/app/src/main/res/values-bs/strings.xml
@@ -16,4 +16,257 @@
   ~ limitations under the License.
   ~
   -->
-<resources></resources>
+<resources>
+  <string name="activateForMorePrefs">Uključi za više podešavanja&#8230;</string>
+  <string name="adhanVolume">Glasnoća ezana</string>
+  <string name="adjAngle">Ugaonski način (ugao/60ti noći)</string>
+  <string name="adjMidnight">Ponoć</string>
+  <string name="adjTime">Vremenski način (1/7 noći)</string>
+  <string name="afterImsak">Poslje sabaha</string>
+  <string name="alternativeOngoing">Alternativni widget za poruke</string>
+  <string name="angle">Ugao</string>
+  <string name="angleBased">Ugao</string>
+  <string name="appName">Vaktija</string>
+  <string name="asr">Ikindija</string>
+  <string name="backup">Sigurnosna kopija</string>
+  <string name="backupRestore">Backup/Restore</string>
+  <string name="beforeSun">Prije izlaska sunca</string>
+  <string name="blackWidget">Crni widget</string>
+  <string name="calcMethod">Način računanja</string>
+  <string name="calendar">Islamski blagdani</string>
+  <string name="calendarIntegration">Integracija kalendara</string>
+  <string name="cancel">Poništi</string>
+  <string name="category">Kategorija</string>
+  <string name="changelog">Šta ima novo?</string>
+  <string name="cities">Gradovi</string>
+  <string name="compass">Kibla kompas</string>
+  <string name="corruptAudio">Loš audio fajl</string>
+  <string name="customVolume">Izaberi jačinu tona</string>
+  <string name="dateAndTime">Datum i vrijeme</string>
+  <string name="date">Datum</string>
+  <string name="dateFormat1">31 Decembar 2013</string>
+  <string name="dateFormat2">31 Decembar 13</string>
+  <string name="dateFormat">Format datuma</string>
+  <string name="dayFr">Petak</string>
+  <string name="dayMo">Ponedeljak</string>
+  <string name="daySa">Subota</string>
+  <string name="dayShortFr">Pe.</string>
+  <string name="dayShortMo">Po.</string>
+  <string name="dayShortSa">Su.</string>
+  <string name="dayShortSu">Ne.</string>
+  <string name="dayShortTh">Če.</string>
+  <string name="dayShortTu">Ut.</string>
+  <string name="dayShortWe">Sr.</string>
+  <string name="daySu">Nedelja</string>
+  <string name="dayTh">Četvrtak</string>
+  <string name="dayTu">Utorak</string>
+  <string name="dayWe">Srijeda</string>
+  <string name="delConfirmDhikr">Želite li zaista da izbrišete \“%1$s\”?</string>
+  <string name="delConfirm">Želite li zaista da izbrišete %1$s?</string>
+  <string name="delete">Izbriši</string>
+  <string name="dhikrCount">Zikr cilj</string>
+  <string name="dhikr">Zikr</string>
+  <string name="distance">Udaljenost</string>
+  <string name="djuma">Džuma</string>
+  <string name="dlHadith">Skini bazu podataka hadisa?</string>
+  <string name="dlSound">Skini “%1$s” (%2$s)?</string>
+  <string name="earlyNotification">rana obavjest</string>
+  <string name="earlyText">%2$s minuta do %1$s</string>
+  <string name="error">Greška nastala</string>
+  <string name="fajr">Sabah</string>
+  <string name="fajrIshaaCalculation">Sabah/Jacija računanje:</string>
+  <string name="fasting">Post</string>
+  <string name="favorite">Favorit</string>
+  <string name="filePicker">Birač fajla</string>
+  <string name="fixTimezone">Vremenska zona +/-:</string>
+  <string name="foundXHadis">pronašao %1$s hadisa</string>
+  <string name="gmonth1">Januar</string>
+  <string name="gmonth2">Februar</string>
+  <string name="gmonth3">Mart</string>
+  <string name="gmonth4">April</string>
+  <string name="gmonth5">Maj</string>
+  <string name="gmonth6">Juni</string>
+  <string name="gmonth7">Juli</string>
+  <string name="gmonth8">August</string>
+  <string name="gmonth9">Septembar</string>
+  <string name="gmonth10">Oktobar</string>
+  <string name="gmonth11">Novembar</string>
+  <string name="gmonth12">Decembar</string>
+  <string name="hadith">Sahih al-Bukhary</string>
+  <string name="hDateFormat1">30 Muharrem 1434</string>
+  <string name="hDateFormat2">30 Muharrem 34</string>
+  <string name="hdateFormat">Format hidžretskog datuma</string>
+  <string name="hijriFix">Justiranje hidžretskog datuma</string>
+  <string name="hmonth1">Muharrem</string>
+  <string name="hmonth2">Safer</string>
+  <string name="hmonth3">Rebiu-l-evvel</string>
+  <string name="hmonth4">Rebiu-l-ahir</string>
+  <string name="hmonth5">Džumade-l-ula</string>
+  <string name="hmonth6">Džumade-l-uhra</string>
+  <string name="hmonth7">Redžeb</string>
+  <string name="hmonth8">Ša\'ban</string>
+  <string name="hmonth9">Ramazan</string>
+  <string name="hmonth10">Ševval</string>
+  <string name="hmonth11">Zu-l-Kade</string>
+  <string name="hmonth12">Zu-l-hidže</string>
+  <string name="holyday1">Nova hidžretska godina</string>
+  <string name="holyday2">Ašura</string>
+  <string name="holyday3">Mevlud</string>
+  <string name="holyday4">Početak tri sveta mjeseca</string>
+  <string name="holyday5">Lejletu-r-regaib</string>
+  <string name="holyday6">Lejletu-l-mi\'radž</string>
+  <string name="holyday7">Lejletu-l-berat</string>
+  <string name="holyday8">Početak ramazana</string>
+  <string name="holyday9">Lejletu-l-Kadr</string>
+  <string name="holyday10">Ramazanski Arefat </string>
+  <string name="holyday11">Ramazanski bajram, 1. dan</string>
+  <string name="holyday12">Ramazanski bajram, 2. dan</string>
+  <string name="holyday13">Ramazanski bajram, 3. dan</string>
+  <string name="holyday14">Dan Arefata</string>
+  <string name="holyday15">Kurban bajram, 1. dan</string>
+  <string name="holyday16">Kurban bajram, 2. dan</string>
+  <string name="holyday17">Kurban bajram, 3. dan</string>
+  <string name="holyday18">Kurban bajram, 4. dan</string>
+  <string name="ishaa">Jacija</string>
+  <string name="juristicHanafi">Hanafi</string>
+  <string name="juristicShafi">Shafi (standard)</string>
+  <string name="kerahatDuration">Mekruh vrijeme - dužina</string>
+  <string name="kerahatIstiwa">Istiva vrijeme (prije podne namaza) </string>
+  <string name="kerahatMaghrib">Zalazak sunca (prije akšam namaza)</string>
+  <string name="kerahatSun">Izlasak sunca (poslje sabaha)</string>
+  <string name="kerahatTime">Mekruh vrijeme za namaz</string>
+  <string name="language">Jezik</string>
+  <string name="leftText">%1$s | još %3$s do %2$s</string>
+  <string name="maghrib">Akšam</string>
+  <string name="missedPrayers">Propušteni namazi</string>
+  <string name="mixed">Izmješano</string>
+  <string name="monthly">Mjesečni prikaz</string>
+  <string name="morningPrayer">Sabah</string>
+  <string name="names">99 Allahovih imena</string>
+  <string name="newAddCity">Koristi novi birač gradova</string>
+  <string name="newDhikr">Novi zikr</string>
+  <string name="noConnection">Bez konekcije...</string>
+  <string name="noFavs">Bez favorita</string>
+  <string name="no">Ne</string>
+  <string name="notification">Obavijest</string>
+  <string name="off">Isključen</string>
+  <string name="ok">Ok</string>
+  <string name="oldAddCity">Koristi ručni izbor grada</string>
+  <string name="ongoingIcon">Sličica obavijesti</string>
+  <string name="ongoingNotification">Widget obavijesti</string>
+  <string name="other">Ostali</string>
+  <string name="permissionCalendarText">Ako hoćete da se islamski blagdani unesu u kalendar onda morate ovoj aplikaciji dati pristup kalendaru. Inače nemojete davati pristup kalendaru ako to ne želite.</string>
+  <string name="permissionCalendarTitle">Pristup kalendaru</string>
+  <string name="permissionCameraText">Potrebno je dati pristup kameri ako želite koristiti 3D kompas. Inače možete samo 2D kompas koristiti.</string>
+  <string name="permissionCameraTitle">Pristup kameri</string>
+  <string name="permissionLocationText">Pristup lokalizaciji je potrebna da bi našli vaš grad. Ako ovaj pristup ne dadnete ovoj aplikaciji onda morate vaš grad ručno tražiti.</string>
+  <string name="permissionLocationTitle">Pristup lokalizaciji</string>
+  <string name="permissionStorageText">Pristup memorisanju je potreban... Bez ovog pristupa neke funkcije neće raditi</string>
+  <string name="permissionStorageTitle">Pristup memorisanju</string>
+  <string name="prayerNotification">Obavijest namaza</string>
+  <string name="refresh">Sinkronizacija</string>
+  <string name="resetConfirmDhikr">Želite li zaista da odstranite \“%1$s\”?</string>
+  <string name="restore">Rekonstruirati</string>
+  <string name="search">Potraga</string>
+  <string name="selectOther">ostali&#8230;</string>
+  <string name="mail">E-mail</string>
+  <string name="sendMail">Pošalji e-mail</string>
+  <string name="settings">Postavke</string>
+  <string name="share">Podijeliti</string>
+  <string name="shareTimes">Današnja vaktija za %1$s</string>
+  <string name="showMore">Pokaži više</string>
+  <string name="silenterDuration">Dužina prigušenog tona</string>
+  <string name="silenterType">Metoda prigušenog tona</string>
+  <string name="silent">Prigušen ton</string>
+  <string name="sorted">Sortirano</string>
+  <string name="soundPicker">Izabirač tona</string>
+  <string name="sound">Ton</string>
+  <string name="sun">Sunce</string>
+  <string name="switchCompass">Kompas/Karta</string>
+  <string name="tasbih">Tespih</string>
+  <string name="tesbihat">Tespihati</string>
+  <string name="timeBased">Minute</string>
+  <string name="time">Vrijeme</string>
+  <string name="touchToSelectCity">Dodirni ovde za izabiranje grada</string>
+  <string name="transWhiteWidget">Transparentni bijeli widget</string>
+  <string name="transWidget">Transparantni widget</string>
+  <string name="test">Pokušaj</string>
+  <string name="use12h">Koristi 12-satni format</string>
+  <string name="useArabicNames">Koristi arapsku vaktiju</string>
+  <string name="useSilenter">Bezvučno</string>
+  <string name="useVibration">Vibracije</string>
+  <string name="version">Verzija</string>
+  <string name="vibrationDesc">Milisekunda - čekaj vibriraj čekaj&#8230;</string>
+  <string name="vibrationPattern">Mustra vibracije</string>
+  <string name="volumeAlarm">Alarm jačina</string>
+  <string name="volumeMedia">Medijalna jačina</string>
+  <string name="volumeRingtone">Jačina telefonskog tona</string>
+  <string name="vote">Ocijeni</string>
+  <string name="whiteWidget">Bijeli widget</string>
+  <string name="widgetClock">Vaktija - 4*2 sat</string>
+  <string name="widgetCountdownType">Widget - Countdown minuta</string>
+  <string name="widgetDesign">Theme</string>
+  <string name="widgetLong">Vaktija - 4*1 Widget</string>
+  <string name="widgetLabel">Vaktija - 2*2 Widget</string>
+  <string name="widgetSilenter">Vaktija - Widget za bezvučnost</string>
+  <string name="widgetSmall">Vaktija - 1*1 Widget</string>
+  <string name="witr">Vitr</string>
+  <string name="yes">Ja</string>
+  <string name="zoomIn">Povećaj</string>
+  <string name="zoomOut">Smanji</string>
+  <string name="zuhr">Podne</string>
+  <string name="calculated">Izračunato</string>
+  <string name="beta_tester">Postani ispitivač</string>
+  <string name="widgetClock2">Vaktija - 2*2 sat</string>
+  <string name="numbers">Cifre</string>
+  <string name="dateFormat3">31 Decembar </string>
+  <string name="hDateFormat3">30 Muharrem </string>
+  <string name="useAlarm">Koristi alarm za obavijesti</string>
+  <string name="useAlarmDesc">EKSPERIMENTALNO - Možete koristiti ovaj podešaj ako obavijesti nebudu pravovremenski dostavljene. Jedna         alarm sličica biće dodana statusnoj traki!    </string>
+  <string name="ongoingNumber">Pokaži minute u obavjestnoj sličici</string>
+  <string name="vakit_indicator">Namaz indikator</string>
+  <string name="vakit_indicator_next">Sljedeći vakat za namaz</string>
+  <string name="vakit_indicator_current">Sadašnji vakat</string>
+  <string name="show_notification_screen">Pokaži obavjestni ekran</string>
+  <string name="autoremove_notification">Izbriši obavjest poslje ezana</string>
+  <string name="about">O ovoj aplikaciji</string>
+  <string name="report_bug">Prijavi grešku</string>
+  <string name="report_bug_sum">Prijavi grešku ili podnesi molbu za nove funkcije.</string>
+  <string name="translate">Prevesti</string>
+  <string name="translate_sum">Pomozi nam prevesti ovu aplikaciju u još više jezika</string>
+  <string name="github">GitHub</string>
+  <string name="github_sum">Forkiraj repo i doprinesi promjene ili javi nove pogrešake.</string>
+  <string name="license">Licencija</string>
+  <string name="license_sum">Check Apache License, Version 2.0 license terms used on Prayer times</string>
+  <string name="library_licenses">Licencija biblioteka</string>
+  <string name="library_licenses_sum">Prikaži biblioteke trećih, korištene u ovoj aplikaciji</string>
+  <string name="rate">Ocijeni</string>
+  <string name="rate_desc">Ocjeni nas pozitivno ako vam se sviđa Vaktija.</string>
+  <string name="sendMail_sum">Pošalji mi e-mail!</string>
+  <string name="beta_tester_desc">Registriraj se kao beta ispitivač</string>
+  <string name="title_activity_maps">Karta</string>
+  <string name="no_internet">Bez konekcije sa internetom</string>
+  <string name="export">Eksport</string>
+  <string name="versionNotSupported">Vaša verzija androida ne podržava ovu funkciju!</string>
+  <string name="from">Od</string>
+  <string name="to">Do</string>
+  <string name="permissionNotGranted">Pristup nije omogućen.</string>
+  <string name="useOSMGeocoder">Koristi Openstreet karte za geocoding</string>
+  <string name="addFromCSV">Dodaj iz CSV fajla</string>
+  <string name="csvFromFile">Unesi CSV iz fajla</string>
+  <string name="csvFromURL">Unesi CSV iz URLa</string>
+  <string name="stopFacedown">Stopiraj zvuk sa okrećanjem ekrana na donju stranu.</string>
+  <string name="ratingFirstDlgTitle">Sviđa li vam se ova aplikacija?</string>
+  <string name="ratingPositiveTitle">Ocjeni ovu aplikaciju!</string>
+  <string name="ratingPositiveText">Ako vam se sviđa ova aplikacija, uzimte malo vremana da bi je na PlayStore ocjenili.</string>
+  <string name="ratingNegativeTitle">Napiši feedback!</string>
+  <string name="ratingNegativeText">Napiši mi e-mail sa tvojim utiskom, problemima i prjedlozima za ovu aplikaciju i pomozite mi je stalno unaprijeđivati!</string>
+  <string name="notnow">Ne sada</string>
+  <string name="totheplaystore">Ponesi me do Play Store</string>
+  <string name="widget_current_vakit">Widget - alternativni prikaz namaskog vremena</string>
+  <string name="support_development">Pomozi razvoj ove aplikacije</string>
+  <string name="widget">Widget</string>
+  <string name="showLegacyWidgets">Pokaži zastarjele widgets</string>
+  <string name="showLegacyWidgetsSummary">Koristi ovo podešavanje samo ako imaš problem sa widgetima</string>
+  <string name="pleaseDeleteAndReadd">Molimo vas izbrišite ovaj grad i dodajte ga ponovo.</string>
+</resources>
